--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -97,10 +97,15 @@
     <Compile Include="Json\JsonArray.cs" />
     <Compile Include="Json\JsonAttribute.cs" />
     <Compile Include="Json\JsonExtensions.cs" />
+    <Compile Include="Json\JsonGroupAttribute.cs" />
+    <Compile Include="Json\JsonHiddenAttribute.cs" />
+    <Compile Include="Json\JsonKeyAttribute.cs" />
     <Compile Include="Json\JsonObject.cs" />
     <Compile Include="Json\JsonObjectSerializer.cs" />
     <Compile Include="Json\JsonPrimitive.cs" />
     <Compile Include="Json\JsonReader.cs" />
+    <Compile Include="Json\JsonReadonlyAttribute.cs" />
+    <Compile Include="Json\JsonRequiredAttribute.cs" />
     <Compile Include="Json\JsonSerializer.cs" />
     <Compile Include="Json\JsonToken.cs" />
     <Compile Include="Json\JsonTokenType.cs" />
