--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -39,10 +39,14 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\..\Sqor.Rest\bin\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -183,6 +187,24 @@
     <Compile Include="Threading\WorkQueue.cs" />
     <Compile Include="Types\Class.cs" />
     <Compile Include="Types\TypeExtensions.cs" />
+    <Compile Include="Web\ActionResult.cs" />
+    <Compile Include="Web\BaseActionDescriptor.cs" />
+    <Compile Include="Web\BaseActionInvoker.cs" />
+    <Compile Include="Web\BaseController.cs" />
+    <Compile Include="Web\BaseParameterBindingInfo.cs" />
+    <Compile Include="Web\BaseParameterDescriptor.cs" />
+    <Compile Include="Web\CustomAttributeExtensions.cs" />
+    <Compile Include="Web\InjectionControllerFactory.cs" />
+    <Compile Include="Web\JsonDefaultModelBinder.cs" />
+    <Compile Include="Web\JsonModelBinder.cs" />
+    <Compile Include="Web\JsonResult.cs" />
+    <Compile Include="Web\JsonTypeAttribute.cs" />
+    <Compile Include="Web\LogFilterAttribute.cs" />
+    <Compile Include="Web\NotAreaConstraint.cs" />
+    <Compile Include="Web\NotNullAttribute.cs" />
+    <Compile Include="Web\NotNullFilterAttribute.cs" />
+    <Compile Include="Web\RestErrorAttribute.cs" />
+    <Compile Include="Web\RestValidationException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Json\Readme.md" />
