--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Enumerables\EnumerableExtensions.cs" />
     <Compile Include="Events\EventExtensions.cs" />
     <Compile Include="Exceptions\ExceptionExtensions.cs" />
+    <Compile Include="Functional\FunctionalExtensions.cs" />
     <Compile Include="Generics\GenericExtensions.cs" />
     <Compile Include="Injection\Binding.cs" />
     <Compile Include="Injection\Cache.cs" />
@@ -195,6 +196,7 @@
     <Compile Include="Web\BaseParameterBindingInfo.cs" />
     <Compile Include="Web\BaseParameterDescriptor.cs" />
     <Compile Include="Web\BaseAsyncActionDescriptor.cs" />
+    <Compile Include="Web\CookieExtensions.cs" />
     <Compile Include="Web\CustomAttributeExtensions.cs" />
     <Compile Include="Web\HttpForbiddenException.cs" />
     <Compile Include="Web\HttpUnauthorizedException.cs" />
