--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Web\HttpUnauthorizedException.cs" />
     <Compile Include="Web\InjectionControllerFactory.cs" />
     <Compile Include="Web\InputExtensions.cs" />
+    <Compile Include="Web\IntegerRouteConstraint.cs" />
     <Compile Include="Web\JsonDefaultModelBinder.cs" />
     <Compile Include="Web\JsonModelBinder.cs" />
     <Compile Include="Web\JsonResult.cs" />
