--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Web\CookieExtensions.cs" />
     <Compile Include="Web\CustomAttributeExtensions.cs" />
     <Compile Include="Web\HttpForbiddenException.cs" />
+    <Compile Include="Web\HttpStatusCodeException.cs" />
     <Compile Include="Web\HttpUnauthorizedException.cs" />
     <Compile Include="Web\InjectionControllerFactory.cs" />
     <Compile Include="Web\InputExtensions.cs" />
