Enum cleanup so it's more efficient and readable.  Also allows marking an enum value as representing null so that it gets json'ed as null rather than a string like "none".

--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Injection\Scopes\SingletonScope.cs" />
     <Compile Include="Injection\Scopes\TransientScope.cs" />
     <Compile Include="Injection\Scopes\WebRequestScope.cs" />
+    <Compile Include="Json\EnumCache.cs" />
     <Compile Include="Json\IJsonConverter.cs" />
     <Compile Include="Json\IJsonSerializer.cs" />
     <Compile Include="Json\JsonArray.cs" />
