Add helper to get dictionary type args Fix json serializer to convert dictionary values Add method on Http to check if url points to a resource that exists Add a helper class to manipulate images

--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Drawing\GraphicsPath.cs" />
     <Compile Include="Drawing\Identicon.cs" />
     <Compile Include="Drawing\Image.cs" />
+    <Compile Include="Images\ImageExtensions.cs" />
     <Compile Include="Drawing\IosBitmap.cs" />
     <Compile Include="Drawing\IosColor.cs" />
     <Compile Include="Drawing\IosFont.cs" />
