Fix missing file

--- a/Sqor.Utils.Ios.csproj
+++ b/Sqor.Utils.Ios.csproj
@@ -213,5 +213,6 @@
     <Compile Include="Json\JsonKeyAttribute.cs" />
     <Compile Include="Json\JsonReadonlyAttribute.cs" />
     <Compile Include="Json\JsonRequiredAttribute.cs" />
+    <Compile Include="Json\EnumCache.cs" />
   </ItemGroup>
 </Project>
