--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -81,6 +81,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -259,6 +260,7 @@
     <Compile Include="Web\HttpStatusCodeException.cs" />
     <Compile Include="Web\HttpUnauthorizedException.cs" />
     <Compile Include="Web\InjectionControllerFactory.cs" />
+    <Compile Include="Web\InjectionDependencyResolver.cs" />
     <Compile Include="Web\InputExtensions.cs" />
     <Compile Include="Web\IntegerRouteConstraint.cs" />
     <Compile Include="Web\JsonDefaultModelBinder.cs" />
