--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -80,6 +80,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\EntityFramework.6.0.2\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -162,6 +165,7 @@
     <Compile Include="Json\IJsonSerializer.cs" />
     <Compile Include="Json\JsonArray.cs" />
     <Compile Include="Json\JsonAttribute.cs" />
+    <Compile Include="Json\JsonContractResolver.cs" />
     <Compile Include="Json\JsonConverterAttribute.cs" />
     <Compile Include="Json\JsonExtensions.cs" />
     <Compile Include="Json\JsonGroupAttribute.cs" />
