fixing some line endings, adding file to project file, and fixing spelling in namespace.

--- a/Sqor.Utils.Ios.csproj
+++ b/Sqor.Utils.Ios.csproj
@@ -212,5 +212,6 @@
     <Compile Include="Net\HttpClientAdapter.cs" />
     <Compile Include="Net\HttpClientFactory.cs" />
     <Compile Include="Json\JsonContractResolver.cs" />
+    <Compile Include="Models\ImplicitValue.cs" />
   </ItemGroup>
 </Project>
