--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Injection\Scopes\SingletonScope.cs" />
     <Compile Include="Injection\Scopes\TransientScope.cs" />
     <Compile Include="Injection\Scopes\WebRequestScope.cs" />
+    <Compile Include="Injection\TypeFactoryResolver.cs" />
     <Compile Include="Json\JsonContractResolver.cs" />
     <Compile Include="Lists\ListExtensions.cs" />
     <Compile Include="Logging\BasicLogFormatter.cs" />
