Adding a function to get a file from the Uri

--- a/Sqor.Utils.Ios.csproj
+++ b/Sqor.Utils.Ios.csproj
@@ -214,5 +214,6 @@
     <Compile Include="Json\JsonContractResolver.cs" />
     <Compile Include="Models\ImplicitValue.cs" />
     <Compile Include="Arrays\ArrayReadOnlyList.cs" />
+    <Compile Include="Files\FileExtensions.cs" />
   </ItemGroup>
 </Project>
