Add new Json contract resolver that allows customization of which properties to include and what properties map to what in an ad-hoc fashion

--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Injection\Scopes\TransientScope.cs" />
     <Compile Include="Injection\Scopes\WebRequestScope.cs" />
     <Compile Include="Injection\TypeFactoryResolver.cs" />
+    <Compile Include="Json\FilterContractResolver.cs" />
     <Compile Include="Json\JsonContractResolver.cs" />
     <Compile Include="Lists\ListExtensions.cs" />
     <Compile Include="Logging\BasicLogFormatter.cs" />
