adding a bunch of image related functions into ImageExtensions so what if they are not all extensions we can fix that later this is a better place for them than the controller, jackwad.

--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -80,6 +80,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\EntityFramework.6.0.2\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="EXIFextractor">
+      <HintPath>..\ExifExtractor\EXIFextractor.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
