--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -132,6 +132,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Csvs\CsvExtensions.cs" />
     <Compile Include="Data\NSDataExtensions.cs" />
     <Compile Include="Drawing\Bitmap.cs" />
     <Compile Include="Drawing\Color.cs" />
