--- a/Sqor.Utils.csproj
+++ b/Sqor.Utils.csproj
@@ -83,6 +83,9 @@
     <Reference Include="EXIFextractor">
       <HintPath>..\ExifExtractor\EXIFextractor.dll</HintPath>
     </Reference>
+    <Reference Include="Magick.NET-x64">
+      <HintPath>..\ImageMagik.NET\Magick.NET-x64.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
